src/components/DataTable/cells/TableCell.scss
@use '../../../utils/index.scss';

.moonstone-tableCell {
    gap: var(--spacing-nano);

    height: -webkit-fill-available; // firefox fixes
    /* stylelint-disable-next-line declaration-block-no-duplicate-properties */
    height: stretch;

    padding-right: var(--spacing-medium);
    padding-left: var(--spacing-medium);
    overflow: hidden;
}

.moonstone-tableCell_scrollable {
    height: -webkit-fill-available; // firefox fixes
    /* stylelint-disable-next-line declaration-block-no-duplicate-properties */
    height: stretch;

    scrollbar-width: thin;

    > * {
        overflow: clip;
    }

    &:hover {
        overflow-x: auto;

        box-shadow: var(--color-gray20) -1px 0 3px 0 inset;

        > * {
            text-overflow: unset;
            overflow: visible;
        }
    }
}

